@@ -2,6 +2,7 @@ Changelog for AdvSearch
 
 AdvSearch dev
 -------------------
+- devide docindex's path by separate engines
 - add controllers for the search engines
 - add new interface to build Zend's search indexes
 - add new pagination type
